# FileManagerAgent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  messages.json  pyproject.toml
src/: db.py  file_manager_agent.py  tools.py  ui.py
src/tools/: __init__.py  file_operations.py  file_utilities.py  search_operations.py  ui_operations.py
