[project]
name = "filemanageragent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "langchain-chroma>=0.2.6",
    "langchain-google-genai>=2.1.12",
    "langgraph>=0.6.10",
    "python-dotenv>=1.1.1",
]
